Fix scaling on mobile

--- a/public/styles.css
+++ b/public/styles.css
@@ -225,7 +225,7 @@ section.articles span {
 
   main::before {
     width: 100%;
-    height: 58em;
+    height: 56em;
   }
 
   section {
@@ -234,6 +234,7 @@ section.articles span {
 
   section.hero-container {
     flex-direction: column-reverse;
+    flex-shrink: 1;
   }
 
   section.hero-image {
